user should be able to delete bookmarks
