# src/controllers/bookmark.controller.ts
@@ -12,6 +12,30 @@ import BookmarkService from '../services/bookmark.service';
 class BookmarkController {
 	private bookmarkService = new BookmarkService();
 
+	public deleteBookmark = async (
+		req: RequestWithUser,
+		res: Response,
+		next: NextFunction
+	) => {
+		try {
+			if (req.user?.id === undefined)
+				throw new HttpException(403, 'you need to be logged in');
+			const userId = req.user.id;
+			const bookmarkId = req.params.bookmarkId;
+			const deleteSucessful = await this.bookmarkService.deleteBookmark(
+				userId,
+				bookmarkId
+			);
+			if (!deleteSucessful)
+				throw new HttpException(400, 'Something went wrong');
+			res.status(200).json({
+				success: true,
+				payload: { message: 'Bookmark deleted Successfully' },
+			});
+		} catch (error) {
+			next(error);
+		}
+	};
 	public createBookmark = async (
 		req: RequestWithUser,
 		res: Response,
